versioned_docs/version-3.1.x/quick_start.mdx
---
id: quick_start
slug: /quick_start
title: Quick Start
description: Quick start guide for Honeycomb
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";
import cloneCodeButton from "./assets/clone-code-button.webp";
import nvmrc from "./assets/nvmrc.png";
import workflowPermissions from "./assets/workflow-permissions.png";

## Creating Your Task Repository

The Honeycomb repository is a template and serves as the starting point for all tasks. Creating your repository from the template starts your project with the same directory structure and files as an existing repository.

1. Go to the [Honeycomb repository](https://github.com/brown-ccv/honeycomb)
2. Click on `Use this template` and select `Create a new repository`.
   ![Use this template](assets/template_0.png)
3. Enter the owner, name, and description of your repository and click on `Create repository from template`.
   ![Create repository](assets/template_1.png)
   :::note
   We recommend creating a public repository and leaving `Include all branches` unchecked
   :::
4. Ensure the repositories workflow permissions are set to "Read and write permissions"

   _`Settings -> Actions -> General -> Workflow permissions`_

   <img
     src={workflowPermissions}
     alt="GitHub workflow permissions settings"
   />

_Additional details about template repositories can be found on the [Github Docs](https://docs.github.com/en/repositories/creating-and-managing-repositories/creating-a-repository-from-a-template)._

## Cloning the Repository

With the repository now setup it can be cloned onto your computer.

1.  Navigate to the repository on [GitHub](https://github.com).
2.  Click the `Code` button and copy the URL

    <img
      src={cloneCodeButton}
      alt="GitHub clone repo button"
    />

3.  Open a terminal and navigate to where you want the cloned directory

<Tabs groupId='os' queryString defaultValue='mac'>
<TabItem
  value='win'
  label='Windows'
>

```shell title="Powershell"
cd 'path/to/directory'
```

</TabItem>
<TabItem
  value='mac'
  label='macOS'
>

```shell title="Terminal.app"
cd 'path/to/directory'
```

</TabItem>
</Tabs>

4. Clone the repo with the following command

```shell title='Paste the URL you copied earlier'
 git clone https://github.com/<YOUR-USERNAME>/<YOUR-REPOSITORY>
```

:::note
Git can be downloaded [here](https://git-scm.com/book/en/v2/Getting-Started-Installing-Git) if it is not already on your system.
:::

_Additional details and alternative methods for cloning a repository can be found on the [Github Docs](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository?tool=webui)._

## Installing Prerequisites

All of the needed programs for Honeycomb must be installed before we can develop our task. We will use a [package manager](https://en.wikipedia.org/wiki/Package_manager) to automatically install them.

See [Prerequisites](prerequisites) for more information about these programs.

### Initial Install

<Tabs groupId='os' queryString defaultValue='mac'>
<TabItem
  value='win'
  label='Windows'
>

1. Run Powershell as an admin from the start menu

   ![Powershell admin launcher](assets/powershell_admin.png)

2. Navigate to the root directory of your cloned repository
3. Paste the following command and follow the prompts to install the listed programs:

   ```shell
   ./winget.ps1
   ```

4. The "Visual Studio Installer" will open a GUI during installation. Make sure "Desktop Development with C++" is checked before continuing.

</TabItem>
<TabItem
  value='mac'
  label='macOS'
>

The most commonly used package manager on macOS is [Homebrew](https://brew.sh).

1.  Paste the following command in a macOS Terminal and follow the prompts to install Homebrew.

    ```shell
    /bin/bash -c '$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)'
    ```

2.  Paste the following command and follow the prompts to install the listed programs:

    ```shell
    brew bundle
    ```

3.  Install Xcode (not available on Homebrew)

    ```shell
    xcode-select --install
    ```

</TabItem>
</Tabs>

:::note
If you are running into issues after installing the packages please restart your terminal and/or reboot your computer. This should resolve most issues.
:::

### Setting Up Node

NVM (Node Version Manager) is a tool for installing and using multiple versions on node on your computer. It must first be installed:

1.  Install NVM

    <Tabs
      groupId="os"
      queryString
      defaultValue="mac"
    >
      <TabItem
        value="win"
        label="Windows"
      >
        <em>
          The previous step installs{" "}
          <a href="https://github.com/coreybutler/nvm-windows">NVM for Windows</a> via the winget
          package manager. Note that this is a different tool than NVM with slight differences
          needed for compatibility with Windows.
        </em>
      </TabItem>
      <TabItem
        value="mac"
        label="macOS"
      >
        ```shell 
        curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.4/install.sh | bash
        ```
      </TabItem>
    </Tabs>

2.  Copy the version number listed in `.nvmrc`. _The version may be different than the screenshot below._

    <img
      src={nvmrc}
      alt=".nvmrc file"
    />

3.  Install that version.

    ```shell
    nvm install [version]
    ```

4.  Use the needed version. This will automatically check the version listed in the `.nvmrc` file.

    ```shell
    nvm use
    ```

5.  Set the current version as your default

    ```shell
    nvm alias default node
    ```

:::note
You can skip step 4 if you've already set a default node version in a different project.
:::

## Install Dependencies

There are many node packages used by Honeycomb that also need to be installed. Node (installed in the previous step) comes with its own package manager to install, update, and maintain these dependencies throughout the development lifecycle.

```shell title="Install Honeycomb's dependencies"
npm install
```

Certain dependencies are best installed globally within node. These tools will be available from the command line anywhere on your system.

```shell title="Install Honeycomb's global dependencies"
npm install -g electron firebase-tools dotenv-cli
```

## Run the Task in Development Mode

Running the task in development mode causes it to hot-reload whenever changes are made to the app. This is how you'll run the project while building your task.

```shell title="Run the task in dev mode"
npm run dev
```

This script launches an electron window with the task and inspector open.

You can quit the task in the middle of development if needed:

<Tabs
  groupId="os"
  queryString
  defaultValue="mac"
>
  <TabItem
    value="win"
    label="Windows"
  >
    <kbd>Control</kbd> + W
  </TabItem>
  <TabItem
    value="mac"
    label="macOS"
  >
    <kbd>⌘</kbd> + Q
  </TabItem>
  <TabItem
    value="linux"
    label="Linux"
  >
    <kbd>Control</kbd> + W
  </TabItem>
</Tabs>

### Saving data

Data is saved throughout the task, even when running in development mode. The location of the task is logged at the beginning of the task wherever you ran `npm run dev`.

Note how the data is organized by study and participant. Every run through of the task will save the data somewhere within this folder!

## Edit the Task

Now that the task is up and running we can make our first changes to the code! We'll edit the `package.json` file to reflect your information.

1. Create a new branch

   ```shell
   git checkout -b <branch-name>
   ```

2. Open `package.json` and edit it to reflect your app:

   1. `name` is your task's name, generally this is the name of our repository
   2. `description` should be rewritten to better match your task
   3. `author` is your lab (or PIs) name, email, and website
   4. `version` should be reset to 1.0.0
   5. `repository` is the link the GitHub repository you created [earlier](#2-start-your-new-task-from-our-template-repository).

3. Save your changes and commit them to git:

   ```shell
   git commit -m "Commit message goes here!"
   ```

4. Create a [pull request](version_control#create-a-pull-request) to bring your changes into the `main` branch

## Next Steps

Honeycomb tasks can be configured to run as a web app in Firebase, or as desktop application via electron. The desktop application can receive port signals from EEG, cameras, foot pedals, and more.

The [Firebase](firebase) page explains how to set up your task with Firebase.

To learn more about how to configure your task for these different scenarios, see [Environment Variables](environment_variables).

The [NPM Scripts](npm_scripts) page lists every script you can run and which environment they use.
